test(setlist): fixture를 실응답 발췌로 교체하고 DTO 검증 완료
.env의 키로 실제 응답을 받아(검색 1건 + 셋리스트 p.1 20건) DTO 가정을 대조했다.

- 페이징 숫자, eventDate dd-MM-yyyy, tape boolean, cover artist 객체 — 문서대로
- versionId는 영문자 포함 문자열("g7302ce25") — 숫자 아님 확인
- tour는 20건 중 3건 누락 → nullable 정당
- sets.set 빈 배열 2건 → 곡 0건 제외 규칙 유효
- city의 문서 외 필드(coords/state/stateCode)는 관용 파싱으로 무시됨

fixture는 실응답에서 대표 3건 발췌(tape+cover+이름 붙은 세트 / tour 누락 /
빈 셋리스트). encore·with·city 없는 venue는 표본에 미등장이라 여전히 문서
기준 가정 — synthetic fixture(artist-setlists-doc-edge-cases.json)로 분리해
커버리지를 유지한다. 검증 결과를 docs/setlist-schema.md에 기록.

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>